# cpp_simulation_game_test_project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
includes/core/: baseClass.hpp
srcs/: main.cpp
